Problems On sync solved

--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  
   "name": "code-settings-sync",
   "displayName": "Visual Studio Code Settings Sync",
   "description": "Syncronize your Visual Studio Code Settings Across Multiple Machines using Github GIST. Currently its only syncing Settings , Snippets , launch and keybindings files.",
   "version": "0.0.1",
   "publisher": "Shan",
+  "author": {
+		"name": "Shan Khan",
+		"url": "http://shanalikhan1.github.io"
+	},
+  "license": "MIT",
+  "galleryBanner": {
+		"color": "#3B4859",
+		"theme": "dark"
+	},
+  "homepage": "https://github.com/shanalikhan1/code-settings-sync",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/shanalikhan1/code-settings-sync.git"
+	},
+	"bugs": {
+		"url": "https://github.com/shanalikhan1/code-settings-sync/issues"
+	},
   "engines": {
     "vscode": "^0.10.1"
   },
   "categories": [
     "Other"
   ],
-  "bugs": {
-    "url": "https://github.com/shanalikhan1/code-settings-sync/issues"
-  },
-   "license": "MIT",
   "activationEvents": [
     "onCommand:extension.updateSettings",
     "onCommand:extension.downloadSettings",
     "onCommand:extension.resetSettings"
   ],
-  "galleryBanner": {
-    "color": "#CFB69A",
-    "theme": "light"
-  },
-  
   "main": "./out/src/extension",
-  
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/shanalikhan1/code-settings-sync"
-    
-  },
   "contributes": {
-    
     "commands": [
       {
         "command": "extension.downloadSettings",
@@ -61,16 +61,18 @@
       }
     ]
   },
-  "scripts": { 
+  "scripts": {
     "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
     "compile": "node ./node_modules/vscode/bin/compile -watch -p ./"
   },
   "devDependencies": {
+    "typescript": "^1.6.2",
+    "vscode": "0.10.x"
+  },
+  "dependencies": {
     "fs": "^0.0.2",
     "github": "^0.2.4",
     "node-github": "0.0.3",
-    "open": "^0.0.5",
-    "typescript": "^1.6.2",
-    "vscode": "0.10.x"
+    "open": "^0.0.5"
   }
 }
