--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
     "fs": "^0.0.2",
     "github": "^0.2.4",
     "node-github": "0.0.3",
-    "open": "^0.0.5"
+    "open": "^0.0.5",
+    "temp": "^0.8.3",
+    "adm-zip": "^0.4.7",
+    "ncp": "^2.0.0"
   }
 }
