--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-settings-sync",
   "displayName": "Visual Studio Code Settings Sync",
-  "description": "Syncronize your Visual Studio Code Settings Across Multiple Machines using Github GIST. Syncronization includes Settings , Snippets , launch and keybindings files and extensions.",
+  "description": "Syncronize your VS Code Settings, Snippets, launch, keybindings files and extensions Across Multiple Machines using Github GIST.",
   "version": "0.0.9",
   "icon": "images/cloud.png",
   "publisher": "Shan",
