--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "activationEvents": [
     "onCommand:extension.updateSettings",
     "onCommand:extension.downloadSettings",
-    "onCommand:extension.resetSettings"
+    "onCommand:extension.resetSettings",
+    "onCommand:extension.SetupSettings"
   ],
   "main": "./out/src/extension",
   "contributes": {
