delete file improvements alongwith ready for release commit

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       },
       {
         "command": "extension.resetSettings",
-        "title": "Sync : Reset"
+        "title": "Sync : Reset Sync Settings"
       }
     ],
     "keybindings": [
