--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   },
   "dependencies": {
     "fs": "^0.0.2",
-    "github": "^0.2.4",
+    "github4": "^1.1.0",
     "open": "^0.0.5",
     "temp": "^0.8.3",
     "adm-zip": "^0.4.7",
