--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-settings-sync",
   "displayName": "Visual Studio Code Settings Sync",
   "description": "Synchronize Settings, Snippets, launch, keybindings files and extensions Across Multiple Machines using Github GIST.",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "icon": "images/cloud.png",
   "publisher": "Shan",
   "author": {
@@ -82,6 +82,7 @@
     "open": "^0.0.5",
     "temp": "^0.8.3",
     "adm-zip": "^0.4.7",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "rimraf": "^2.5.3"
   }
 }
