--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-settings-sync",
   "displayName": "Visual Studio Code Settings Sync",
   "description": "Synchronize Settings, Snippets, launch, keybindings files and extensions Across Multiple Machines using Github GIST.",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "icon": "images/cloud.png",
   "publisher": "Shan",
   "author": {
@@ -37,7 +37,8 @@
     "onCommand:extension.HowSettings",
     "onCommand:extension.OpenIssue",
     "onCommand:extension.autoSync",
-    "onCommand:extension.summary"
+    "onCommand:extension.summary",
+    "onCommand:extension.otherOptions"
     
   ],
   "main": "./out/src/extension",
@@ -78,6 +79,10 @@
       {
         "command": "extension.summary",
         "title": "Sync : Toggle Show Summary On Upload / Download"
+      },
+       {
+        "command": "extension.otherOptions",
+        "title": "Sync : Other Options"
       }
     ],
     "keybindings": [
