--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-settings-sync",
   "displayName": "Visual Studio Code Settings Sync",
   "description": "Synchronize Settings, Snippets, launch, keybindings files and extensions Across Multiple Machines using Github GIST.",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "icon": "images/cloud.png",
   "publisher": "Shan",
   "author": {
@@ -32,26 +32,18 @@
     "onCommand:extension.updateSettings",
     "onCommand:extension.downloadSettings",
     "onCommand:extension.resetSettings",
-    "onCommand:extension.releaseNotes",
-    "onCommand:extension.openSettings",
+    //"onCommand:extension.releaseNotes",
+    //"onCommand:extension.openSettings",
     "onCommand:extension.HowSettings",
-    "onCommand:extension.OpenIssue",
-    "onCommand:extension.autoSync",
-    "onCommand:extension.summary",
+    //"onCommand:extension.OpenIssue",
+    //"onCommand:extension.autoSync",
+    //"onCommand:extension.summary",
     "onCommand:extension.otherOptions"
     
   ],
   "main": "./out/src/extension",
   "contributes": {
     "commands": [
-      {
-        "command": "extension.openSettings",
-        "title": "Sync : Open Settings"
-      },
-      {
-        "command": "extension.OpenIssue",
-        "title": "Sync : Open Issue"
-      },
       {
         "command": "extension.HowSettings",
         "title": "Sync : How To Configure"
@@ -64,25 +56,9 @@
         "command": "extension.updateSettings",
         "title": "Sync : Update / Upload Settings"
       },
-      {
-        "command": "extension.resetSettings",
-        "title": "Sync : Reset Extension Settings"
-      },
-      {
-        "command": "extension.releaseNotes",
-        "title": "Sync : Release Notes"
-      },
-       {
-        "command": "extension.autoSync",
-        "title": "Sync : Toggle Auto Download On Startup"
-      },
-      {
-        "command": "extension.summary",
-        "title": "Sync : Toggle Show Summary On Upload / Download"
-      },
        {
         "command": "extension.otherOptions",
-        "title": "Sync : Other Options"
+        "title": "Sync : Advance Options"
       }
     ],
     "keybindings": [
