--- a/package.json
+++ b/package.json
@@ -32,12 +32,7 @@
     "onCommand:extension.updateSettings",
     "onCommand:extension.downloadSettings",
     "onCommand:extension.resetSettings",
-    //"onCommand:extension.releaseNotes",
-    //"onCommand:extension.openSettings",
     "onCommand:extension.HowSettings",
-    //"onCommand:extension.OpenIssue",
-    //"onCommand:extension.autoSync",
-    //"onCommand:extension.summary",
     "onCommand:extension.otherOptions"
     
   ],
@@ -85,11 +80,11 @@
   },
   "dependencies": {
     "fs": "^0.0.2",
-    "github4": "^1.1.1",
     "open": "^0.0.5",
     "temp": "^0.8.3",
     "adm-zip": "^0.4.7",
     "ncp": "^2.0.0",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "github" : "^2.6.0"
   }
 }
