--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-settings-sync",
   "displayName": "Visual Studio Code Settings Sync",
   "description": "Synchronize Settings, Snippets, launch, keybindings files and extensions Across Multiple Machines using Github GIST.",
-  "version": "2.2.5",
+  "version": "2.2.6",
   "icon": "images/cloud.png",
   "publisher": "Shan",
   "author": {
@@ -88,6 +88,7 @@
     "adm-zip": "^0.4.7",
     "ncp": "^2.0.0",
     "rimraf": "^2.5.4",
-    "github": "^2.6.0"
+    "github": "^2.6.0",
+    "is-online": "^5.1.2"
   }
 }
