--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,14 @@
         "module": "commonjs",
         "target": "es6",
         "outDir": "out",
-        "sourceMap": true
+        "lib": [
+            "es6"
+        ],
+        "sourceMap": true,
+        "rootDir": "src"
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
+        ".vscode-test"
     ]
 }
