--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
             "es6"
         ],
         "sourceMap": true,
-        "rootDir": "src"
-    },
+        "rootDir": "."
+    }, 
     "exclude": [
         "node_modules",
         ".vscode-test"
