--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "node-watch": "0.4.0",
     "open": "^0.0.5",
     "rimraf": "^2.5.4",
-    "temp": "^0.8.3"
+    "temp": "^0.8.3",
+    "https-proxy-agent" : "^1.0.0"
   }
 }
