#180 , #182 Releasing final version for public.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "code-settings-sync",
     "displayName": "Settings Sync",
     "description": "Synchronize Settings, Snippets, launch, keybindings, workspaces and extensions Across Multiple Machines using Github Gist.",
-    "version": "2.4.1",
+    "version": "2.4.2",
     "icon": "images/cloud.png",
     "publisher": "Shan",
     "author": {
@@ -128,7 +128,7 @@
                 "sync.anonymousGist": {
                     "type": "boolean",
                     "default": false,
-                    "description": "Set it to true if you want to create or download from Anonymous Gist. Github token not required"
+                    "description": "Set it to true if you want to create or download from Anonymous Gist. Extension won't ask for Github token"
                 }
             },
             "title": "Code Settings Sync Configuration Settings"
